--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
     font-size: 1.5em;
 }
 
+.App .no-wrap {
+    white-space: nowrap;
+}
+
 .App .question input {
     margin: 0;
     padding: 0;
